--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,23 +1,28 @@
 lint:
   files_exist:
-  - CODE_OF_CONDUCT.md
-  - assets/nf-core-toolkit_logo_light.png
-  - docs/images/nf-core-toolkit_logo_light.png
-  - docs/images/nf-core-toolkit_logo_dark.png
-  - .github/ISSUE_TEMPLATE/config.yml
-  - .github/workflows/awstest.yml
-  - .github/workflows/awsfulltest.yml
+    - CODE_OF_CONDUCT.md
+    - assets/nf-core-toolkit_logo_light.png
+    - docs/images/nf-core-toolkit_logo_light.png
+    - docs/images/nf-core-toolkit_logo_dark.png
+    - .github/ISSUE_TEMPLATE/config.yml
+    - .github/workflows/awstest.yml
+    - .github/workflows/awsfulltest.yml
+    - conf/modules.config
+    - conf/test.config
+    - conf/test_full.config
   files_unchanged:
-  - CODE_OF_CONDUCT.md
-  - assets/nf-core-toolkit_logo_light.png
-  - docs/images/nf-core-toolkit_logo_light.png
-  - docs/images/nf-core-toolkit_logo_dark.png
-  - .github/ISSUE_TEMPLATE/bug_report.yml
+    - CODE_OF_CONDUCT.md
+    - assets/nf-core-toolkit_logo_light.png
+    - docs/images/nf-core-toolkit_logo_light.png
+    - docs/images/nf-core-toolkit_logo_dark.png
+    - .github/ISSUE_TEMPLATE/bug_report.yml
+    - .github/workflows/linting.yml
   multiqc_config:
-  - report_comment
+    - report_comment
   nextflow_config:
-  - manifest.name
-  - manifest.homePage
+    - manifest.name
+    - manifest.homePage
+  modules_config: false
 nf_core_version: 2.14.1
 repository_type: pipeline
 template:
