Update uw hyak profile and fixed cobra publishdir

--- a/modules/nf-core/seqkit/seq/nextflow.config
+++ b/modules/nf-core/seqkit/seq/nextflow.config
@@ -1,7 +1,7 @@
 process {
     withName: COBRA_SEQ {
         publishDir = [
-            path: { "${params.outdir}/AssemblyExtension/cobra/seq/${meta.id}_${meta.assembler}_${meta.assembly_method}_${meta.extension}" },
+            path: { "${params.outdir}/AssemblyExtension/cobra/seq/${meta.id}_${meta.assembler}_${meta.assembly_method}" },
             mode: params.publish_dir_mode,
             pattern: '*.f*.gz',
             enabled: true
