--- a/modules/nf-core/seqkit/fx2tab/nextflow.config
+++ b/modules/nf-core/seqkit/fx2tab/nextflow.config
@@ -1,7 +1,7 @@
 process {
     withName: COBRA_FX2TAB {
         publishDir = [
-            path: { "${params.outdir}/AssemblyExtension/cobra/fx2tab" },
+            path: { "${params.outdir}/AssemblyExtension/cobra/fx2tab/${meta.id}_${meta.assembler}_${meta.assembly_method}" },
             mode: params.publish_dir_mode,
             pattern: '*.txt',
             enabled: true
