--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,5 +1,21 @@
+bump_version: null
 lint:
   files_exist:
+    - conf/igenomes.config
+    - assets/multiqc_config.yml
+    - assets/email_template.html
+    - assets/sendmail_template.txt
+    - assets/email_template.txt
+    - docs/output.md
+    - docs/README.md
+    - docs/usage.md
+    - assets/multiqc_config.yml
+    - assets/email_template.html
+    - assets/sendmail_template.txt
+    - assets/email_template.txt
+    - docs/output.md
+    - docs/README.md
+    - docs/usage.md
     - CODE_OF_CONDUCT.md
     - assets/nf-core-toolkit_logo_light.png
     - docs/images/nf-core-toolkit_logo_light.png
@@ -7,28 +23,55 @@ lint:
     - .github/ISSUE_TEMPLATE/config.yml
     - .github/workflows/awstest.yml
     - .github/workflows/awsfulltest.yml
-    - conf/modules.config
-    - conf/test.config
-    - conf/test_full.config
   files_unchanged:
+    - .github/CONTRIBUTING.md
+    - assets/sendmail_template.txt
+    - .prettierignore
+    - .prettierignore
+    - .prettierignore
+    - .github/CONTRIBUTING.md
+    - assets/sendmail_template.txt
+    - .prettierignore
+    - .prettierignore
+    - .prettierignore
     - CODE_OF_CONDUCT.md
     - assets/nf-core-toolkit_logo_light.png
     - docs/images/nf-core-toolkit_logo_light.png
     - docs/images/nf-core-toolkit_logo_dark.png
     - .github/ISSUE_TEMPLATE/bug_report.yml
-    - .github/workflows/linting.yml
-  multiqc_config:
-    - report_comment
+  multiqc_config: false
   nextflow_config:
+    - process.cpus
+    - process.memory
+    - process.time
+    - custom_config
+    - params.custom_config_version
+    - params.custom_config_base
     - manifest.name
     - manifest.homePage
-  modules_config: false
-nf_core_version: 2.14.1
+    - validation.help.beforeText
+    - validation.help.afterText
+    - validation.summary.beforeText
+    - validation.summary.afterText
+nf_core_version: 3.0.0.dev0
+org_path: null
 repository_type: pipeline
 template:
-  prefix: nf-microbe
-  skip: []
-update:
-  https://github.com/nf-microbe/modules.git:
-    nf-core:
-      megahit/megahit: False
+  author: CarsonJM
+  description: A Nextflow pipeline for running microbe-related analyses
+  force: false
+  is_nfcore: false
+  name: toolkit
+  org: nf-microbe
+  outdir: .
+  skip_features:
+    - nf_core_configs
+    - multiqc
+    - fastqc
+    - email
+    - adaptivecard
+    - slackreport
+    - documentation
+    - seqera_platform
+  version: 1.0.0dev
+update: null
